# adyar

./: .gitmodules  CMakeLists.txt  README.md  kkmacs_v2.cpp
data/: input.fa  input.txt  roseobacter.clade1.fas  text.txt
src/: main.cpp  util.hpp
